Demonstrate how to activate virtual threads in Spring Boot